--- a/Case1_JSON/json-XMLHttpRequest.html
+++ b/Case1_JSON/json-XMLHttpRequest.html
@@ -10,10 +10,10 @@
 	<h1>Get JSON Open Data</h1>
 	<h3>Using XMLHttpRequest()</h3>
 	<div id="data_grid"></div>
-	
+
 	<script>
 	var xmlhttp = new XMLHttpRequest();
-	var url = "https://cloud.culture.tw/frontsite/trans/SearchShowAction.do?method=doFindTypeJ&category=1";
+	var url = "https://cloud.culture.tw/frontsite/trans/SearchShowAction.do?method=doFindTypeJ&category=11";
 
 	xmlhttp.onreadystatechange=function() {
 		if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
@@ -30,9 +30,9 @@
 
 		for(i = 0; i < arr.length; i++) {
 			out += "<tr><td>" +
-			arr[i].title + "</td><td>" +
-			arr[i].sourceWebName + "</td><td>(" +
-			arr[i].startDate + " ~ " + arr[i].endDate + ")</td></tr>";
+			arr[i].name + "</td><td>" +
+			arr[i].address + "</td><td>(" +
+			arr[i].tel + " ~ " + arr[i].number + ")</td></tr>";
 		}
 		out += "</table>";
 		document.getElementById("data_grid").innerHTML = out;
