--- a/Case1_JSON/json-ajax.html
+++ b/Case1_JSON/json-ajax.html
@@ -16,7 +16,7 @@
         jQuery(document).ready(function(){
             $.ajax({
                 type: "GET",
-                url: "https://cloud.culture.tw/frontsite/trans/SearchShowAction.do?method=doFindTypeJ&category=1",
+                url: "https://cloud.culture.tw/frontsite/trans/SearchShowAction.do?method=doFindTypeJ&category=11",
                 dataType: "json",
                 async: true,
                 success: function(arr) {
@@ -25,12 +25,12 @@
                     var i;
                     var out = '<table class="table table-striped table-hover"><thead><tr><th scope="col">#</th><th scope="col">活動名稱</th>'
                             + '<th scope="col">報名</th><th scope="col">活動日期</th></tr></thead><tbody>';
-            
+
                         for(i = 0; i < arr.length; i++) {
                             out += '<tr><th scope="row">' + i + '</th><td>' +
                             arr[i].title + "</td><td>" +
-                            arr[i].sourceWebName + "</td><td>(" +
-                            arr[i].startDate + " ~ " + arr[i].endDate + ")</td></tr>";
+                            arr[i].sourceWebName + "</td><td>" +
+                            arr[i].startDate +"~"+arr[i].endDate + "</td></tr>";
                         }
                         out += "</tbody></table>";
                         document.getElementById("data_grid").innerHTML = out;
